# gst-droid

gst-libs/gst/droid/: Makefile.am
